clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr124358.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr124358.c" (c, x86_64-unknown-linux-gnu)
global __const.main.a : s32i[4][1] = ConstArray { ty: Array { element_type: Array { element_type: Named("s32i"), size: 4 }, size: 1 }, elts: Array([ConstArray { ty: Array { element_type: Named("s32i"), size: 4 }, elts: Array([CirInt { ty: Named("s32i"), value: "11" }, CirInt { ty: Named("s32i"), value: "12" }, CirInt { ty: Named("s32i"), value: "13" }, CirInt { ty: Named("s32i"), value: "14" }]), trailing_zeros_num: 0 }]), trailing_zeros_num: 0 } [cir_private, default, dso_local, constant]
global foo.u : s32i = CirInt { ty: Named("s32i"), value: "11" } [internal, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn foo(%arg0: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %28 = alloca s32i, "d", align 4
        store %arg0, %28
        %29 = get_global @foo.u : s32i*
        scope {
                %30 = load %28 : s32i, align 4
                %31 = load %29 : s32i, align 4
                inc
                store %32, %29, align 4
                cmp
                if %33 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[4][1], "a", align 16
        %2 = alloca s32i[4]*, "p", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = get_global @__const.main.a : s32i[4][1]*
        copy
        %5 = cast(array_to_ptrdecay) %1 : s32i[4]*
        store %5, %2, align 8
        scope {
                %7 = alloca s32i, "i", align 4
                %8 = const 0 : s32i
                store %8, %7, align 4
                for cond {
                        %25 = load %7 : s32i, align 4
                        %26 = const 1 : s32i
                        cmp
                        condition %27
                } step {
                        %9 = load %7 : s32i, align 4
                        inc
                        store %10, %7, align 4
                        yield
                } body {
                        scope {
                                %11 = alloca s32i, "j", align 4
                                %12 = const 0 : s32i
                                store %12, %11, align 4
                                for cond {
                                        %22 = load %11 : s32i, align 4
                                        %23 = const 4 : s32i
                                        cmp
                                        condition %24
                                } step {
                                        %13 = load %11 : s32i, align 4
                                        inc
                                        store %14, %11, align 4
                                        yield
                                } body {
                                        %15 = load %2 : s32i[4]*, align 8
                                        %16 = load %7 : s32i, align 4
                                        ptr_stride
                                        %18 = cast(array_to_ptrdecay) %17 : s32i*
                                        %19 = load %11 : s32i, align 4
                                        ptr_stride
                                        %21 = load %20 : s32i, align 4
                                        call @foo(%21) [all]
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %6 = load %0 : s32i
        return %6
}
