clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr15262_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr15262-1.c" (c, x86_64-unknown-linux-gnu)
fn foo() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %46 = alloca s32i, "__retval", align 4
    %47 = const 3 : s32i
    store %47, %46
    %48 = load %46 : s32i
    return %48
}
fn malloc(%arg0: u64i) -> void* [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_A, "loc", align 4
    %2 = alloca rec_A*, "locp", align 8
    %3 = alloca float, "f", align 4
    %4 = alloca float, "g", align 4
    %5 = alloca float*, "p", align 8
    %6 = alloca s32i, "T355", align 4
    %7 = alloca s32i*, "T356", align 8
    %8 = const 0 : s32i
    store %8, %0
    %9 = const 3 : s32i
    %10 = cast(int_to_float) %9 : float
    store %10, %3, align 4
    %11 = const 2 : s32i
    %12 = cast(int_to_float) %11 : float
    store %12, %4, align 4
    %13 = get_global @foo : (() -> s32i)*
    %14 = call @foo() : s32i [all]
    %15 = cast(int_to_bool) %14 : bool
    %16 = ternary %15 ? { : float*
        yield %4
    } : {
        yield %3
    }
    store %16, %5, align 8
    scope {
        %39 = load %5 : float*, align 8
        %40 = load %39 : float, align 4
        %41 = cast(floating) %40 : double
        %42 = const 0.000000e+00 : double
        %43 = cmp gt %41, %42 : bool
        if %43 {
            %44 = const 1 : s32i
            %45 = cast(int_to_float) %44 : float
            store %45, %4, align 4
            yield
        }
        yield
    }
    %17 = const 8 : u64i
    %18 = call @malloc(%17) : void* [all]
    %19 = cast(bitcast) %18 : rec_A*
    store %19, %2, align 8
    %20 = const 10 : s32i
    %21 = load %2 : rec_A*, align 8
    %22 = get_member %21[1] "i" : s32i*
    store %20, %22, align 4
    %23 = load %2 : rec_A*, align 8
    %24 = get_member %23[1] "i" : s32i*
    %25 = load %24 : s32i, align 4
    store %25, %6, align 4
    %26 = load %2 : rec_A*, align 8
    %27 = get_member %26[1] "i" : s32i*
    store %27, %7, align 8
    %28 = const 1 : s32i
    %29 = load %7 : s32i*, align 8
    store %28, %29, align 4
    %30 = load %2 : rec_A*, align 8
    %31 = get_member %30[1] "i" : s32i*
    %32 = load %31 : s32i, align 4
    store %32, %6, align 4
    scope {
        %35 = load %6 : s32i, align 4
        %36 = const 1 : s32i
        %37 = cmp ne %35, %36 : bool
        if %37 {
            %38 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %33 = const 0 : s32i
    store %33, %0
    %34 = load %0 : s32i
    return %34
}
