clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr15262_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr15262-2.c" (c, x86_64-unknown-linux-gnu)
global X : float = CirFloat { ty: Single, value: "0.000000e+00" } [external, default, align 4, dso_local]

fn foo(%arg0: void*, %arg1: float, %arg2: rec_A*, %arg3: float*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: void*, %arg1: float, %arg2: rec_A*, %arg3: float*):
        %20 = alloca rec_anon_struct, "coerce", align 8
        %21 = alloca rec_anon_struct, "coerce", align 8
        get_member
        store %arg0, %22
        get_member
        store %arg1, %23
        %24 = load %21 : rec_anon_struct
        store %24, %20
        %25 = cast(bitcast) %20 : rec_B*
        %26 = load %25 : rec_B
        %27 = alloca rec_B, "b", align 8
        %28 = alloca rec_A*, "q", align 8
        %29 = alloca float*, "h", align 8
        %30 = alloca s32i, "__retval", align 4
        store %26, %27
        store %arg2, %28
        store %arg3, %29
        %31 = load %29 : float*, align 8
        %32 = load %31 : float, align 4
        %33 = get_global @X : float*
        %34 = load %33 : float, align 4
        fadd
        store %35, %33, align 4
        %36 = const 3 : s32i
        get_member
        %38 = load %37 : s32i*, align 8
        store %36, %38, align 4
        %39 = const 2 : s32i
        %40 = load %28 : rec_A*, align 8
        get_member
        store %39, %41, align 4
        get_member
        %43 = load %42 : s32i*, align 8
        %44 = load %43 : s32i, align 4
        store %44, %30
        %45 = load %30 : s32i
        return %45
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca rec_B, "coerce", align 8
        %1 = alloca s32i, "__retval", align 4
        %2 = alloca rec_A, "a", align 4
        %3 = alloca rec_B, "b", align 8
        %4 = const 0 : s32i
        store %4, %1
        get_member
        get_member
        store %5, %6, align 8
        scope {
                %9 = get_global @X : float*
                %10 = load %3 : rec_B, align 8
                store %10, %0
                %11 = cast(bitcast) %0 : rec_anon_struct*
                get_member
                %13 = load %12 : void*
                get_member
                %15 = load %14 : float
                %16 = call @foo(%13, %15, %2, %9) : s32i [all]
                %17 = const 3 : s32i
                cmp
                if %18 {
                        %19 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %7 = const 0 : s32i
        store %7, %1
        %8 = load %1 : s32i
        return %8
}
